Fix squished avatars in the project history table
Also, remove unused variables.

--- a/app/styles/components/_project-history.scss
+++ b/app/styles/components/_project-history.scss
@@ -69,6 +69,7 @@ $project-history-baby-blue: #54acb0;
 
     .avatar {
       margin: 0;
+      min-width: $avatar-size;
     }
   }
 }
